<resources>
    <string name="app_name">DropApp</string>

    <!-- Format -->

    <string name="format_item_list">%1$s (x%2$s)</string>
    <string name="format_item_price">%1$.2f€/u.</string>
    <string name="format_item_amount">%1$s u.</string>

    <!-- Català -->
    <string name="title_activity_table_list">Taules</string>
    <string name="title_activity_order_list">Comandes</string>
    <string name="title_activity_order_request">Envia comanda</string>
    <string name="btn_reset_request">Buida</string>
    <string name="btn_submit_request">Envia</string>
    <string name="info_drop_item">Producte Drop</string>
    <string name="info_normal_item">Producte sense descompte</string>
    <string name="ok">D\'acord</string>
    <string name="cancel">Cancel·la</string>
    <string name="btn_notify">Notifica taula</string>

    <string name="info_item_list_empty">No s\'ha demanat res</string>

    <!-- Placeholders -->
    <string name="title_table">Taula 1</string>
    <string name="score">700 punts</string>
    <string name="status">Vol realitzar comanda</string>
    <string name="name_item">Cervesa</string>
    <string name="counter_item">88</string>
    <string name="list_items">Cervesa x1, Cervesa Drop x2, Braves x1, Coca-Cola x2, Aigua x1</string>
    <string name="price_item">88.88€/u.</string>
    <string name="units_item">Unitats: 88</string>
    
</resources>
