<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/card_padding_horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_alignParentLeft="true"
            android:layout_toRightOf="@+id/tv_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_item"
            android:textSize="@dimen/text_m"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/tv_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_item_units"
            android:text="@string/price_item"
            android:textSize="@dimen/text_m"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/tv_item_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/extra_m"
            android:text="@string/units_item"
            android:textSize="@dimen/text_m"
            android:textColor="@color/colorPrimaryDark"
            />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>